--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/server.js",
     "build": "NODE_ENV=production webpack && npm start ",
+    "config": "sh server/config/config.sh",
     "dev": "webpack-dev-server --open --env.NODE_ENV=development & nodemon server/server.js"
   },
   "repository": {
