--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.16.2",
     "faker": "^4.1.0",
     "googleapis": "^40.0.1",
+    "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0",
@@ -37,6 +38,7 @@
     "react-router-dom": "^5.0.1",
     "react-toastify": "^5.3.1",
     "request": "^2.88.0",
+    "socket.io": "^2.2.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
